<resources>
    <string name="app_name">Wallpaper Bazaar Admin</string>
    <string name="todo">TODO</string>
    <string name="show_data">Show Data</string>
    <string name="upload_category">Upload Category</string>
    <string name="upload_banner_image">Update Banner Image</string>
    <string name="enter_url">Enter Url</string>
    <string name="upload_banner">Update Banner</string>
    <string name="cancel">cancel</string>
    <string name="upload_live_wallpaper">Upload Live Wallpaper</string>
    <string name="update_pro_file_url">Update Pro File Url</string>
    <string name="show_live_wallpapers">Show Live Wallpapers</string>
    <string name="show_premium_images">Show Premium Images</string>
    <string name="show_popular_images">Show Popular Images</string>
    <string name="update_ads_ids">Update Ads Ids</string>
    <string name="turbo_share_ads_id">Turbo share ads Id</string>
    <string name="show_user_data">Show User Data</string>
    <string name="update_pro_wall_url">Update Pro Wall Url</string>
    <string name="upload_own_ads">Upload Own Ads</string>
    <string name="show_own_ads">Show Own Ads</string>
    <string name="upload_ads_ids">Upload Ads Ids</string>
    <string name="enter_banner_url">Enter Banner Url</string>
    <string name="enter_native_url">Enter Native Url</string>
    <string name="interstitial_url">Interstitial Url</string>
    <string name="upload">Upload</string>
    <string name="ads_off">Ads OFF</string>

</resources>